[package]
name = "qrfs_mkfs"
version = "0.1.0"
edition = "2024"

[dependencies]
qrfs_lib = { version = "0.1.0", path = "../qrfs_lib" }
clap = { version = "4.4", features = ["derive"] } # Para argumentos de línea de comandos
rpassword = "7.0"       # Para pedir password sin mostrarla en pantalla
anyhow = "1.0"          # Manejo de errores fácil para binarios
bincode = "1.3"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }