[package]
name = "qrfs_print"
version = "0.1.0"
edition = "2024"

[dependencies]
qrfs_lib = { version = "0.1.0", path = "../qrfs_lib" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"

# LA CLAVE: printpdf 0.5.3 usa image 0.23 internamente.
# Debemos usar la misma para que sean compatibles.
printpdf = "0.4"
image = "0.24"
    